src/css/legislation_fixes.scss
// visibility for fragments

.fragment .legislation{
    h1,h2,h3,h4,h5, .cover, .empowering-prov-layout{
        display:none;
    }
    .current, .prov{
    h1,h2,h3,h4,h5, .cover{
        display:block;
    }
    }
}
.legislation .label{
    font-weight: inherit;
      cursor:pointer;
}


.history-note{
    display:none;
}
.notes .results-container .history-note{
    display: inherit;

}

.underlines .results-container .legislation a{
    text-decoration: underline;
    color:#337ab7;

}

.underlines .results-container .legislation{
    h1,h2,h3,h4,h5,h6 {
        a{
            text-decoration: none;
            color:#000;
        }
    }
}
.underlines .results-container .legislation a.def-popover{
    color:#000;
    text-decoration: none;
    border-bottom: 1px solid #00BD00;
  }

.legislation a,
.legislation a.def-popover,
.legislation a.def-popover{
    color:#000;
}


.legislation {
    // fixed margin collapse, for height calculations
    *[data-location], *[data-hook]{
        overflow: hidden;
        -webkit-overflow-scrolling: auto;
    }
    .prov *, .label-para *{
        overflow:visible;
    }
    .em{
        font-style:italic;
    }
    .row {

    }
      .row:before, .row:after {
        content: initial;
        display: intial;
    }

     p.house,  h1.sop-heading, p.sop-date {
        text-align: center;
        font-size: 1.7em;
        font-weight: bold;
        line-height: 100%;
    }
     ul.list {
        margin-left: 0
    }

     ul.list li {
        margin-left: 3em
    }

     ul.list li.bull {
        list-style-type: disc;
        display: list-item;
        margin-left: 1.2em;
        padding-left: 2em
    }
}

/*
.legislation .label{
    display:initial;
    color:#000;
    text-align:left;
    white-space: normal;
    border-radius:initial;
}



.legislation-result .legislation div.prov ul.prov li p.headless.label{
    margin-bottom:0;
    a{
        text-decoration: none;
        color:#000;
        cursor:pointer;
    }
}

.legislation p.label{
  display:block;
}

/*
.latest-version .legislation .reprint-date{
	display:none;
}*/
/*
.legislation{

	hr.signature-block,
	hr.explnote,
	hr.promulgation,
	hr.reprint-index,
	hr.reprint-index{
		margin: 32px auto;
	}
}
*/

